# cardiologyintelligentagent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  VERSION  cardiology-monorepo.code-workspace  docker-compose.prod.yaml  docker-compose.yaml  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: SECURITY.md  (+1 more)
services/ai-agent/: .dockerignore  .env.example  Dockerfile  README.md  guide_parser.py  manage.py  pyproject.toml  requirements.txt  test_graph.py  test_multiturn.py
services/ai-agent/cardiology_chat/: apps.py  urls.py  views.py
services/ai-agent/cardiology_chat/graph/: __init__.py  builder.py  checkpointer.py  dialogue_core.py  director.py  memory.py  state.py  utils.py
services/ai-agent/cardiology_chat/infra/: redis_client.py
services/ai-agent/cardiology_chat/memory/: commit.py  extractors.py  schema.py
services/ai-agent/cardiology_chat/middlewares/: internal_token.py
services/ai-agent/cardiology_chat/prompt/: general_prompt.py
services/ai-agent/cardiology_chat/prompts/: dispatch.py  fallback.py  history.py  lab.py  medication.py  referral.py  risk.py  symptom.py
services/ai-agent/cardiology_chat/rag/: __init__.py  embeddings.py  guide_names.py  guide_rerank.py  guide_retriever.py  guide_store.py  milvus_uri.py  text_normalize.py
services/ai-agent/cardiology_chat/serializers/: chat_serializer.py
services/ai-agent/cardiology_chat/services/: chat_graph_service.py  session_summary_service.py
services/ai-agent/configuration/: settings.py  urls.py
services/ai-agent/configuration/handler/: exception_handler.py
services/ai-agent/eval/: README.md  run_eval.py
services/ai-agent/eval/cases/: cardiology_regression.json
services/ai-agent/log/: banner.py
services/ai-agent/scripts/: ingest_guides.py  test_rag_retrieval.py
services/ai-agent/tests/: test_guide_names.py  test_guide_rerank.py  test_memory_extractors.py  test_route_rules.py  test_symptom_routing.py  test_user_memory.py
(+382 files in other folders)
