[project]
name = "cardiology-ai-agent"
version = "0.1.0"
description = "Cardiology Intelligent Agent - Django DRF + LangChain AI service"
authors = [
    {name = "zengxiangruiit@gmail.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "langchain (>=1.3.7,<2.0.0)",
    "langchain-core (>=1.4.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-deepseek (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "dashscope (>=1.25.21,<2.0.0)",
    "pymilvus (>=2.6.9,<3.0.0)",
    "langchain-milvus (>=0.3.3,<0.4.0)",
    "langchain-unstructured (>=1.0.1,<2.0.0)",
    "unstructured[pdf] (>=0.23.1,<0.24.0)",
    "zhipuai (>=2.1.5.20250825,<3.0.0.0)",
    "langgraph (>=1.2.5,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "langgraph-checkpoint-postgres (>=3.1.0,<4.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)"
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

